--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -77,14 +77,14 @@
   --popover: oklch(0.9702 0 0);
   --popover-foreground: oklch(0.3211 0 0);
   --primary: oklch(0.4891 0 0);
-  --primary-foreground: oklch(1.0000 0 0);
+  --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.9067 0 0);
   --secondary-foreground: oklch(0.3211 0 0);
   --muted: oklch(0.8853 0 0);
   --muted-foreground: oklch(0.5103 0 0);
   --accent: oklch(0.8078 0 0);
   --accent-foreground: oklch(0.3211 0 0);
-  --destructive: oklch(0.5594 0.1900 25.8625);
+  --destructive: oklch(0.5594 0.19 25.8625);
   --border: oklch(0.8576 0 0);
   --input: oklch(0.9067 0 0);
   --ring: oklch(0.4891 0 0);
@@ -93,15 +93,15 @@
   --chart-3: oklch(0.6534 0 0);
   --chart-4: oklch(0.7316 0 0);
   --chart-5: oklch(0.8078 0 0);
-  --sidebar: oklch(0.9370 0 0);
+  --sidebar: oklch(0.937 0 0);
   --sidebar-foreground: oklch(0.3211 0 0);
   --sidebar-primary: oklch(0.4891 0 0);
-  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-primary-foreground: oklch(1 0 0);
   --sidebar-accent: oklch(0.8078 0 0);
   --sidebar-accent-foreground: oklch(0.3211 0 0);
   --sidebar-border: oklch(0.8576 0 0);
   --sidebar-ring: oklch(0.4891 0 0);
-  --destructive-foreground: oklch(1.0000 0 0);
+  --destructive-foreground: oklch(1 0 0);
   --font-sans: Montserrat, sans-serif;
   --font-serif: Georgia, serif;
   --font-mono: Fira Code, monospace;
@@ -135,12 +135,12 @@
   --primary-foreground: oklch(0.2178 0 0);
   --secondary: oklch(0.3092 0 0);
   --secondary-foreground: oklch(0.8853 0 0);
-  --muted: oklch(0.2850 0 0);
+  --muted: oklch(0.285 0 0);
   --muted-foreground: oklch(0.5999 0 0);
   --accent: oklch(0.3715 0 0);
   --accent-foreground: oklch(0.8853 0 0);
-  --destructive: oklch(0.6591 0.1530 22.1703);
-  --border: oklch(0.3290 0 0);
+  --destructive: oklch(0.6591 0.153 22.1703);
+  --border: oklch(0.329 0 0);
   --input: oklch(0.3092 0 0);
   --ring: oklch(0.7058 0 0);
   --chart-1: oklch(0.7058 0 0);
@@ -154,9 +154,9 @@
   --sidebar-primary-foreground: oklch(0.2178 0 0);
   --sidebar-accent: oklch(0.3715 0 0);
   --sidebar-accent-foreground: oklch(0.8853 0 0);
-  --sidebar-border: oklch(0.3290 0 0);
+  --sidebar-border: oklch(0.329 0 0);
   --sidebar-ring: oklch(0.7058 0 0);
-  --destructive-foreground: oklch(1.0000 0 0);
+  --destructive-foreground: oklch(1 0 0);
   --radius: 0.35rem;
   --font-sans: Inter, sans-serif;
   --font-serif: Georgia, serif;
